ivory/src/Ivory/Language/Syntax/Concrete/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.3 from Parser.y
-----------------------------------------------------------------------------


terminal bitlit is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_ivoryParser -> defs                         (0)
	defs -> defs procDef                               (1)
	defs -> defs structDef                             (2)
	defs -> defs bdDef                                 (3)
	defs ->                                            (4)
	procDef -> type ident '(' args ')' '{' stmts '}' prePostBlk   (5)
	tyArg -> type tyident                              (6)
	args -> args ',' tyArg                             (7)
	args -> args ','                                   (8)
	args -> tyArg                                      (9)
	args ->                                            (10)
	prePostBlk -> '{' prePosts '}'                     (11)
	prePostBlk ->                                      (12)
	prePosts -> prePosts prePost ';'                   (13)
	prePosts -> prePost ';'                            (14)
	prePost -> pre '(' exp ')'                         (15)
	prePost -> post '(' exp ')'                        (16)
	simpleStmt -> assert exp                           (17)
	simpleStmt -> assume exp                           (18)
	simpleStmt -> assign ident '=' exp                 (19)
	simpleStmt -> return                               (20)
	simpleStmt -> return exp                           (21)
	simpleStmt -> alloc '*' ident '=' exp              (22)
	simpleStmt -> alloc ident '[' ']' '=' '{' exps '}'   (23)
	simpleStmt -> refCopy ident ident                  (24)
	simpleStmt -> '*' ident '=' exp                    (25)
	simpleStmt -> '*' arrExp '=' exp                   (26)
	simpleStmt -> ident '(' exps ')'                   (27)
	simpleStmt -> ident '=' ident '(' exps ')'         (28)
	blkStmt -> loop ident '{' stmts '}'                (29)
	blkStmt -> forever '{' stmts '}'                   (30)
	blkStmt -> if exp '{' stmts '}' else '{' stmts '}'   (31)
	stmts -> stmts simpleStmt ';'                      (32)
	stmts -> stmts blkStmt                             (33)
	stmts -> simpleStmt ';'                            (34)
	stmts -> blkStmt                                   (35)
	exps -> exps ',' exp                               (36)
	exps -> exps ','                                   (37)
	exps -> exp                                        (38)
	exps ->                                            (39)
	exp -> integer                                     (40)
	exp -> ident                                       (41)
	exp -> return                                      (42)
	exp -> '(' exp ')'                                 (43)
	exp -> arrExp                                      (44)
	exp -> ident '&>' ident                            (45)
	exp -> '*' exp                                     (46)
	exp -> '!' exp                                     (47)
	exp -> '-' exp                                     (48)
	exp -> '~' exp                                     (49)
	exp -> abs exp                                     (50)
	exp -> signum exp                                  (51)
	exp -> expOp exp                                   (52)
	exp -> sqrt exp                                    (53)
	exp -> log exp                                     (54)
	exp -> pow exp                                     (55)
	exp -> sin exp                                     (56)
	exp -> cos exp                                     (57)
	exp -> tan exp                                     (58)
	exp -> asin exp                                    (59)
	exp -> acos exp                                    (60)
	exp -> atan exp                                    (61)
	exp -> sinh exp                                    (62)
	exp -> cosh exp                                    (63)
	exp -> tanh exp                                    (64)
	exp -> asinh exp                                   (65)
	exp -> acosh exp                                   (66)
	exp -> atanh exp                                   (67)
	exp -> isnan exp                                   (68)
	exp -> isinf exp                                   (69)
	exp -> round exp                                   (70)
	exp -> ceil exp                                    (71)
	exp -> floor exp                                   (72)
	exp -> const exp                                   (73)
	exp -> exp '||' exp                                (74)
	exp -> exp '&&' exp                                (75)
	exp -> exp '|' exp                                 (76)
	exp -> exp '^' exp                                 (77)
	exp -> exp '&' exp                                 (78)
	exp -> exp '<<' exp                                (79)
	exp -> exp '>>' exp                                (80)
	exp -> exp '==' exp                                (81)
	exp -> exp '!=' exp                                (82)
	exp -> exp '<' exp                                 (83)
	exp -> exp '<=' exp                                (84)
	exp -> exp '>' exp                                 (85)
	exp -> exp '>=' exp                                (86)
	exp -> exp '+' exp                                 (87)
	exp -> exp '-' exp                                 (88)
	exp -> exp '*' exp                                 (89)
	exp -> exp '/' exp                                 (90)
	exp -> exp '%' exp                                 (91)
	exp -> exp '?' exp ':' exp                         (92)
	arrExp -> ident '!' exp                            (93)
	type -> cType                                      (94)
	type -> hsType                                     (95)
	cType -> baseTypeC                                 (96)
	cType -> refTypeC                                  (97)
	baseTypeC -> bool                                  (98)
	baseTypeC -> char                                  (99)
	baseTypeC -> float                                 (100)
	baseTypeC -> double                                (101)
	baseTypeC -> void                                  (102)
	baseTypeC -> int8_t                                (103)
	baseTypeC -> int16_t                               (104)
	baseTypeC -> int32_t                               (105)
	baseTypeC -> int64_t                               (106)
	baseTypeC -> uint8_t                               (107)
	baseTypeC -> uint16_t                              (108)
	baseTypeC -> uint32_t                              (109)
	baseTypeC -> uint64_t                              (110)
	refTypeC -> refC baseTypeC                         (111)
	refTypeC -> refC areaC                             (112)
	refC -> scopeC '*'                                 (113)
	refC -> const scopeC '*'                           (114)
	areaC -> arrayTypeC                                (115)
	areaC -> structName                                (116)
	arrayTypeC -> baseTypeC '[' integer ']'            (117)
	arrayTypeC -> areaC '[' integer ']'                (118)
	scopeC -> S                                        (119)
	scopeC -> G                                        (120)
	scopeC -> ident                                    (121)
	scopeC ->                                          (122)
	hsType -> baseTypeHS                               (123)
	hsType -> refTypeHS                                (124)
	baseTypeHS -> IBool                                (125)
	baseTypeHS -> IChar                                (126)
	baseTypeHS -> IFloat                               (127)
	baseTypeHS -> IDouble                              (128)
	baseTypeHS -> '(' ')'                              (129)
	baseTypeHS -> Sint8                                (130)
	baseTypeHS -> Sint16                               (131)
	baseTypeHS -> Sint32                               (132)
	baseTypeHS -> Sint64                               (133)
	baseTypeHS -> Uint8                                (134)
	baseTypeHS -> Uint16                               (135)
	baseTypeHS -> Uint32                               (136)
	baseTypeHS -> Uint64                               (137)
	baseTypeHS -> Ix integer                           (138)
	baseTypeHS -> '(' baseTypeHS ')'                   (139)
	baseTypeHS -> tyident                              (140)
	areaHS -> Stored baseTypeHS                        (141)
	areaHS -> Struct tyident                           (142)
	areaHS -> Array integer areaHS                     (143)
	areaHS -> '(' areaHS ')'                           (144)
	areaHS -> tyident                                  (145)
	refTypeHS -> Ref scopeHS areaHS                    (146)
	refTypeHS -> ConstRef scopeHS areaHS               (147)
	scopeHS -> Stack tyident                           (148)
	scopeHS -> Global                                  (149)
	bitType -> Bit                                     (150)
	bitType -> Bits integer                            (151)
	bitType -> BitArray integer bitType                (152)
	bitType -> '(' bitType ')'                         (153)
	bitType -> tyident                                 (154)
	structDef -> structName '{' fields '}'             (155)
	structDef -> abstract structName fp                (156)
	structDef -> string structName integer             (157)
	structName -> struct tyident                       (158)
	field -> ident '::' areaHS                         (159)
	fields -> fields ';' field                         (160)
	fields -> fields ';'                               (161)
	fields -> field                                    (162)
	bdDef -> bitdata tyident '::' bitType '=' bdConstrs   (163)
	bdConstrs -> bdConstrs '|' bdConstr                (164)
	bdConstrs -> bdConstr                              (165)
	bdConstr -> ident bdRecord bdLayout                (166)
	bdRecord -> '{' bdFields '}'                       (167)
	bdRecord ->                                        (168)
	bdFields -> bdFields ',' bdField                   (169)
	bdFields -> bdField                                (170)
	bdField -> ident '::' bitType                      (171)
	bdField -> '_' '::' bitType                        (172)
	bdLayout -> as bdItems                             (173)
	bdLayout ->                                        (174)
	bdItems -> bdItems '#' bdItem                      (175)
	bdItems -> bdItem                                  (176)
	bdItem -> ident                                    (177)
	bdItem -> integer                                  (178)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	integer        { TokInteger $$ }
	bitlit         { TokBitLit $$ $$ }
	ident          { TokIdent $$ }
	tyident        { TokTyIdent $$ }
	fp             { TokFilePath $$ }
	if             { TokReserved "if" }
	else           { TokReserved "else" }
	assert         { TokReserved "assert" }
	assume         { TokReserved "assume" }
	pre            { TokReserved "pre" }
	post           { TokReserved "post" }
	assign         { TokReserved "let" }
	return         { TokReserved "return" }
	alloc          { TokReserved "alloc" }
	refCopy        { TokReserved "memcpy" }
	loop           { TokReserved "map" }
	forever        { TokReserved "forever" }
	abs            { TokReserved "abs" }
	signum         { TokReserved "signum" }
	expOp          { TokReserved "exp" }
	sqrt           { TokReserved "sqrt" }
	log            { TokReserved "log" }
	pow            { TokReserved "pow" }
	sin            { TokReserved "sin" }
	cos            { TokReserved "cos" }
	tan            { TokReserved "tan" }
	asin           { TokReserved "asin" }
	acos           { TokReserved "acos" }
	atan           { TokReserved "atan" }
	sinh           { TokReserved "sinh" }
	cosh           { TokReserved "cosh" }
	tanh           { TokReserved "tanh" }
	asinh          { TokReserved "asinh" }
	acosh          { TokReserved "acosh" }
	atanh          { TokReserved "atanh" }
	isnan          { TokReserved "isnan" }
	isinf          { TokReserved "isinf" }
	round          { TokReserved "round" }
	ceil           { TokReserved "ceil" }
	floor          { TokReserved "floor" }
	const          { TokReserved "const" }
	'::'           { TokSym "::" }
	'?'            { TokSym "?" }
	':'            { TokSym ":" }
	'&>'           { TokSym "&>" }
	'=='           { TokSym "==" }
	'!='           { TokSym "!=" }
	'*'            { TokSym "*" }
	'/'            { TokSym "/" }
	'+'            { TokSym "+" }
	'-'            { TokSym "-" }
	'%'            { TokSym "%" }
	'='            { TokSym "=" }
	'<'            { TokSym "<" }
	'<='           { TokSym "<=" }
	'>='           { TokSym ">=" }
	'>'            { TokSym ">" }
	'|'            { TokSym "|" }
	'&'            { TokSym "&" }
	'^'            { TokSym "^" }
	'~'            { TokSym "~" }
	'!'            { TokSym "!" }
	'&&'           { TokSym "&&" }
	'||'           { TokSym "||" }
	'<<'           { TokSym "<<" }
	'>>'           { TokSym ">>" }
	'('            { TokBrack "(" }
	')'            { TokBrack ")" }
	'{'            { TokBrack "{" }
	'}'            { TokBrack "}" }
	'['            { TokBrack "[" }
	']'            { TokBrack "]" }
	';'            { TokSep ";" }
	','            { TokSep "," }
	bool           { TokReserved "bool" }
	char           { TokReserved "char" }
	float          { TokReserved "float" }
	double         { TokReserved "double" }
	void           { TokReserved "void" }
	int8_t         { TokReserved "int8_t" }
	int16_t        { TokReserved "int16_t" }
	int32_t        { TokReserved "int32_t" }
	int64_t        { TokReserved "int64_t" }
	uint8_t        { TokReserved "uint8_t" }
	uint16_t       { TokReserved "uint16_t" }
	uint32_t       { TokReserved "uint32_t" }
	uint64_t       { TokReserved "uint64_t" }
	S              { TokReserved "S" }
	G              { TokReserved "G" }
	IBool          { TokReserved "IBool" }
	IChar          { TokReserved "IChar" }
	IFloat         { TokReserved "IFloat" }
	IDouble        { TokReserved "IDouble" }
	Sint8          { TokReserved "Sint8" }
	Sint16         { TokReserved "Sint16" }
	Sint32         { TokReserved "Sint32" }
	Sint64         { TokReserved "Sint64" }
	Uint8          { TokReserved "Uint8" }
	Uint16         { TokReserved "Uint16" }
	Uint32         { TokReserved "Uint32" }
	Uint64         { TokReserved "Uint64" }
	Ix             { TokReserved "Ix" }
	Ref            { TokReserved "Ref" }
	ConstRef       { TokReserved "ConstRef" }
	Array          { TokReserved "Array" }
	Struct         { TokReserved "Struct" }
	Stored         { TokReserved "Stored" }
	Stack          { TokReserved "Stack" }
	Global         { TokReserved "Global" }
	struct         { TokReserved "struct" }
	abstract       { TokReserved "abstract" }
	string         { TokReserved "string" }
	bitdata        { TokReserved "bitdata" }
	Bit            { TokReserved "Bit" }
	Bits           { TokReserved "Bits" }
	BitArray       { TokReserved "BitArray" }
	as             { TokReserved "as" }
	'_'            { TokSym "_" }
	'#'            { TokSym "#" }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_ivoryParser rule  0
	defs            rules 1, 2, 3, 4
	procDef         rule  5
	tyArg           rule  6
	args            rules 7, 8, 9, 10
	prePostBlk      rules 11, 12
	prePosts        rules 13, 14
	prePost         rules 15, 16
	simpleStmt      rules 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28
	blkStmt         rules 29, 30, 31
	stmts           rules 32, 33, 34, 35
	exps            rules 36, 37, 38, 39
	exp             rules 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92
	arrExp          rule  93
	type            rules 94, 95
	cType           rules 96, 97
	baseTypeC       rules 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110
	refTypeC        rules 111, 112
	refC            rules 113, 114
	areaC           rules 115, 116
	arrayTypeC      rules 117, 118
	scopeC          rules 119, 120, 121, 122
	hsType          rules 123, 124
	baseTypeHS      rules 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140
	areaHS          rules 141, 142, 143, 144, 145
	refTypeHS       rules 146, 147
	scopeHS         rules 148, 149
	bitType         rules 150, 151, 152, 153, 154
	structDef       rules 155, 156, 157
	structName      rule  158
	field           rule  159
	fields          rules 160, 161, 162
	bdDef           rule  163
	bdConstrs       rules 164, 165
	bdConstr        rule  166
	bdRecord        rules 167, 168
	bdFields        rules 169, 170
	bdField         rules 171, 172
	bdLayout        rules 173, 174
	bdItems         rules 175, 176
	bdItem          rules 177, 178

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	ident          reduce using rule 4
	tyident        reduce using rule 4
	const          reduce using rule 4
	'*'            reduce using rule 4
	'('            reduce using rule 4
	bool           reduce using rule 4
	char           reduce using rule 4
	float          reduce using rule 4
	double         reduce using rule 4
	void           reduce using rule 4
	int8_t         reduce using rule 4
	int16_t        reduce using rule 4
	int32_t        reduce using rule 4
	int64_t        reduce using rule 4
	uint8_t        reduce using rule 4
	uint16_t       reduce using rule 4
	uint32_t       reduce using rule 4
	uint64_t       reduce using rule 4
	S              reduce using rule 4
	G              reduce using rule 4
	IBool          reduce using rule 4
	IChar          reduce using rule 4
	IFloat         reduce using rule 4
	IDouble        reduce using rule 4
	Sint8          reduce using rule 4
	Sint16         reduce using rule 4
	Sint32         reduce using rule 4
	Sint64         reduce using rule 4
	Uint8          reduce using rule 4
	Uint16         reduce using rule 4
	Uint32         reduce using rule 4
	Uint64         reduce using rule 4
	Ix             reduce using rule 4
	Ref            reduce using rule 4
	ConstRef       reduce using rule 4
	struct         reduce using rule 4
	abstract       reduce using rule 4
	string         reduce using rule 4
	bitdata        reduce using rule 4
	%eof           reduce using rule 4

	defs           goto state 3

State 1



	defs           goto state 2

State 2

	defs -> defs . procDef                              (rule 1)
	defs -> defs . structDef                            (rule 2)
	defs -> defs . bdDef                                (rule 3)

	ident          shift, and enter state 17
	tyident        shift, and enter state 18
	const          shift, and enter state 19
	'*'            reduce using rule 122
	'('            shift, and enter state 20
	bool           shift, and enter state 21
	char           shift, and enter state 22
	float          shift, and enter state 23
	double         shift, and enter state 24
	void           shift, and enter state 25
	int8_t         shift, and enter state 26
	int16_t        shift, and enter state 27
	int32_t        shift, and enter state 28
	int64_t        shift, and enter state 29
	uint8_t        shift, and enter state 30
	uint16_t       shift, and enter state 31
	uint32_t       shift, and enter state 32
	uint64_t       shift, and enter state 33
	S              shift, and enter state 34
	G              shift, and enter state 35
	IBool          shift, and enter state 36
	IChar          shift, and enter state 37
	IFloat         shift, and enter state 38
	IDouble        shift, and enter state 39
	Sint8          shift, and enter state 40
	Sint16         shift, and enter state 41
	Sint32         shift, and enter state 42
	Sint64         shift, and enter state 43
	Uint8          shift, and enter state 44
	Uint16         shift, and enter state 45
	Uint32         shift, and enter state 46
	Uint64         shift, and enter state 47
	Ix             shift, and enter state 48
	Ref            shift, and enter state 49
	ConstRef       shift, and enter state 50
	struct         shift, and enter state 51
	abstract       shift, and enter state 52
	string         shift, and enter state 53
	bitdata        shift, and enter state 54

	procDef        goto state 4
	type           goto state 5
	cType          goto state 6
	baseTypeC      goto state 7
	refTypeC       goto state 8
	refC           goto state 9
	scopeC         goto state 10
	hsType         goto state 11
	baseTypeHS     goto state 12
	refTypeHS      goto state 13
	structDef      goto state 14
	structName     goto state 15
	bdDef          goto state 16

State 3

	%start_ivoryParser -> defs .                        (rule 0)
	defs -> defs . procDef                              (rule 1)
	defs -> defs . structDef                            (rule 2)
	defs -> defs . bdDef                                (rule 3)

	ident          shift, and enter state 17
	tyident        shift, and enter state 18
	const          shift, and enter state 19
	'*'            reduce using rule 122
	'('            shift, and enter state 20
	bool           shift, and enter state 21
	char           shift, and enter state 22
	float          shift, and enter state 23
	double         shift, and enter state 24
	void           shift, and enter state 25
	int8_t         shift, and enter state 26
	int16_t        shift, and enter state 27
	int32_t        shift, and enter state 28
	int64_t        shift, and enter state 29
	uint8_t        shift, and enter state 30
	uint16_t       shift, and enter state 31
	uint32_t       shift, and enter state 32
	uint64_t       shift, and enter state 33
	S              shift, and enter state 34
	G              shift, and enter state 35
	IBool          shift, and enter state 36
	IChar          shift, and enter state 37
	IFloat         shift, and enter state 38
	IDouble        shift, and enter state 39
	Sint8          shift, and enter state 40
	Sint16         shift, and enter state 41
	Sint32         shift, and enter state 42
	Sint64         shift, and enter state 43
	Uint8          shift, and enter state 44
	Uint16         shift, and enter state 45
	Uint32         shift, and enter state 46
	Uint64         shift, and enter state 47
	Ix             shift, and enter state 48
	Ref            shift, and enter state 49
	ConstRef       shift, and enter state 50
	struct         shift, and enter state 51
	abstract       shift, and enter state 52
	string         shift, and enter state 53
	bitdata        shift, and enter state 54
	%eof           accept

	procDef        goto state 4
	type           goto state 5
	cType          goto state 6
	baseTypeC      goto state 7
	refTypeC       goto state 8
	refC           goto state 9
	scopeC         goto state 10
	hsType         goto state 11
	baseTypeHS     goto state 12
	refTypeHS      goto state 13
	structDef      goto state 14
	structName     goto state 15
	bdDef          goto state 16

State 4

	defs -> defs procDef .                              (rule 1)

	ident          reduce using rule 1
	tyident        reduce using rule 1
	const          reduce using rule 1
	'*'            reduce using rule 1
	'('            reduce using rule 1
	bool           reduce using rule 1
	char           reduce using rule 1
	float          reduce using rule 1
	double         reduce using rule 1
	void           reduce using rule 1
	int8_t         reduce using rule 1
	int16_t        reduce using rule 1
	int32_t        reduce using rule 1
	int64_t        reduce using rule 1
	uint8_t        reduce using rule 1
	uint16_t       reduce using rule 1
	uint32_t       reduce using rule 1
	uint64_t       reduce using rule 1
	S              reduce using rule 1
	G              reduce using rule 1
	IBool          reduce using rule 1
	IChar          reduce using rule 1
	IFloat         reduce using rule 1
	IDouble        reduce using rule 1
	Sint8          reduce using rule 1
	Sint16         reduce using rule 1
	Sint32         reduce using rule 1
	Sint64         reduce using rule 1
	Uint8          reduce using rule 1
	Uint16         reduce using rule 1
	Uint32         reduce using rule 1
	Uint64         reduce using rule 1
	Ix             reduce using rule 1
	Ref            reduce using rule 1
	ConstRef       reduce using rule 1
	struct         reduce using rule 1
	abstract       reduce using rule 1
	string         reduce using rule 1
	bitdata        reduce using rule 1
	%eof           reduce using rule 1


State 5

	procDef -> type . ident '(' args ')' '{' stmts '}' prePostBlk    (rule 5)

	ident          shift, and enter state 73


State 6

	type -> cType .                                     (rule 94)

	ident          reduce using rule 94
	tyident        reduce using rule 94


State 7

	cType -> baseTypeC .                                (rule 96)

	ident          reduce using rule 96
	tyident        reduce using rule 96


State 8

	cType -> refTypeC .                                 (rule 97)

	ident          reduce using rule 97
	tyident        reduce using rule 97


State 9

	refTypeC -> refC . baseTypeC                        (rule 111)
	refTypeC -> refC . areaC                            (rule 112)

	bool           shift, and enter state 21
	char           shift, and enter state 22
	float          shift, and enter state 23
	double         shift, and enter state 24
	void           shift, and enter state 25
	int8_t         shift, and enter state 26
	int16_t        shift, and enter state 27
	int32_t        shift, and enter state 28
	int64_t        shift, and enter state 29
	uint8_t        shift, and enter state 30
	uint16_t       shift, and enter state 31
	uint32_t       shift, and enter state 32
	uint64_t       shift, and enter state 33
	struct         shift, and enter state 51

	baseTypeC      goto state 69
	areaC          goto state 70
	arrayTypeC     goto state 71
	structName     goto state 72

State 10

	refC -> scopeC . '*'                                (rule 113)

	'*'            shift, and enter state 68


State 11

	type -> hsType .                                    (rule 95)

	ident          reduce using rule 95
	tyident        reduce using rule 95


State 12

	hsType -> baseTypeHS .                              (rule 123)

	ident          reduce using rule 123
	tyident        reduce using rule 123


State 13

	hsType -> refTypeHS .                               (rule 124)

	ident          reduce using rule 124
	tyident        reduce using rule 124


State 14

	defs -> defs structDef .                            (rule 2)

	ident          reduce using rule 2
	tyident        reduce using rule 2
	const          reduce using rule 2
	'*'            reduce using rule 2
	'('            reduce using rule 2
	bool           reduce using rule 2
	char           reduce using rule 2
	float          reduce using rule 2
	double         reduce using rule 2
	void           reduce using rule 2
	int8_t         reduce using rule 2
	int16_t        reduce using rule 2
	int32_t        reduce using rule 2
	int64_t        reduce using rule 2
	uint8_t        reduce using rule 2
	uint16_t       reduce using rule 2
	uint32_t       reduce using rule 2
	uint64_t       reduce using rule 2
	S              reduce using rule 2
	G              reduce using rule 2
	IBool          reduce using rule 2
	IChar          reduce using rule 2
	IFloat         reduce using rule 2
	IDouble        reduce using rule 2
	Sint8          reduce using rule 2
	Sint16         reduce using rule 2
	Sint32         reduce using rule 2
	Sint64         reduce using rule 2
	Uint8          reduce using rule 2
	Uint16         reduce using rule 2
	Uint32         reduce using rule 2
	Uint64         reduce using rule 2
	Ix             reduce using rule 2
	Ref            reduce using rule 2
	ConstRef       reduce using rule 2
	struct         reduce using rule 2
	abstract       reduce using rule 2
	string         reduce using rule 2
	bitdata        reduce using rule 2
	%eof           reduce using rule 2


State 15

	structDef -> structName . '{' fields '}'            (rule 155)

	'{'            shift, and enter state 67


State 16

	defs -> defs bdDef .                                (rule 3)

	ident          reduce using rule 3
	tyident        reduce using rule 3
	const          reduce using rule 3
	'*'            reduce using rule 3
	'('            reduce using rule 3
	bool           reduce using rule 3
	char           reduce using rule 3
	float          reduce using rule 3
	double         reduce using rule 3
	void           reduce using rule 3
	int8_t         reduce using rule 3
	int16_t        reduce using rule 3
	int32_t        reduce using rule 3
	int64_t        reduce using rule 3
	uint8_t        reduce using rule 3
	uint16_t       reduce using rule 3
	uint32_t       reduce using rule 3
	uint64_t       reduce using rule 3
	S              reduce using rule 3
	G              reduce using rule 3
	IBool          reduce using rule 3
	IChar          reduce using rule 3
	IFloat         reduce using rule 3
	IDouble        reduce using rule 3
	Sint8          reduce using rule 3
	Sint16         reduce using rule 3
	Sint32         reduce using rule 3
	Sint64         reduce using rule 3
	Uint8          reduce using rule 3
	Uint16         reduce using rule 3
	Uint32         reduce using rule 3
	Uint64         reduce using rule 3
	Ix             reduce using rule 3
	Ref            reduce using rule 3
	ConstRef       reduce using rule 3
	struct         reduce using rule 3
	abstract       reduce using rule 3
	string         reduce using rule 3
	bitdata        reduce using rule 3
	%eof           reduce using rule 3


State 17

	scopeC -> ident .                                   (rule 121)

	'*'            reduce using rule 121


State 18

	baseTypeHS -> tyident .                             (rule 140)

	ident          reduce using rule 140
	tyident        reduce using rule 140
	')'            reduce using rule 140
	'}'            reduce using rule 140
	';'            reduce using rule 140


State 19

	refC -> const . scopeC '*'                          (rule 114)

	ident          shift, and enter state 17
	'*'            reduce using rule 122
	S              shift, and enter state 34
	G              shift, and enter state 35

	scopeC         goto state 66

State 20

	baseTypeHS -> '(' . ')'                             (rule 129)
	baseTypeHS -> '(' . baseTypeHS ')'                  (rule 139)

	tyident        shift, and enter state 18
	'('            shift, and enter state 20
	')'            shift, and enter state 65
	IBool          shift, and enter state 36
	IChar          shift, and enter state 37
	IFloat         shift, and enter state 38
	IDouble        shift, and enter state 39
	Sint8          shift, and enter state 40
	Sint16         shift, and enter state 41
	Sint32         shift, and enter state 42
	Sint64         shift, and enter state 43
	Uint8          shift, and enter state 44
	Uint16         shift, and enter state 45
	Uint32         shift, and enter state 46
	Uint64         shift, and enter state 47
	Ix             shift, and enter state 48

	baseTypeHS     goto state 64

State 21

	baseTypeC -> bool .                                 (rule 98)

	ident          reduce using rule 98
	tyident        reduce using rule 98
	'['            reduce using rule 98


State 22

	baseTypeC -> char .                                 (rule 99)

	ident          reduce using rule 99
	tyident        reduce using rule 99
	'['            reduce using rule 99


State 23

	baseTypeC -> float .                                (rule 100)

	ident          reduce using rule 100
	tyident        reduce using rule 100
	'['            reduce using rule 100


State 24

	baseTypeC -> double .                               (rule 101)

	ident          reduce using rule 101
	tyident        reduce using rule 101
	'['            reduce using rule 101


State 25

	baseTypeC -> void .                                 (rule 102)

	ident          reduce using rule 102
	tyident        reduce using rule 102
	'['            reduce using rule 102


State 26

	baseTypeC -> int8_t .                               (rule 103)

	ident          reduce using rule 103
	tyident        reduce using rule 103
	'['            reduce using rule 103


State 27

	baseTypeC -> int16_t .                              (rule 104)

	ident          reduce using rule 104
	tyident        reduce using rule 104
	'['            reduce using rule 104


State 28

	baseTypeC -> int32_t .                              (rule 105)

	ident          reduce using rule 105
	tyident        reduce using rule 105
	'['            reduce using rule 105


State 29

	baseTypeC -> int64_t .                              (rule 106)

	ident          reduce using rule 106
	tyident        reduce using rule 106
	'['            reduce using rule 106


State 30

	baseTypeC -> uint8_t .                              (rule 107)

	ident          reduce using rule 107
	tyident        reduce using rule 107
	'['            reduce using rule 107


State 31

	baseTypeC -> uint16_t .                             (rule 108)

	ident          reduce using rule 108
	tyident        reduce using rule 108
	'['            reduce using rule 108


State 32

	baseTypeC -> uint32_t .                             (rule 109)

	ident          reduce using rule 109
	tyident        reduce using rule 109
	'['            reduce using rule 109


State 33

	baseTypeC -> uint64_t .                             (rule 110)

	ident          reduce using rule 110
	tyident        reduce using rule 110
	'['            reduce using rule 110


State 34

	scopeC -> S .                                       (rule 119)

	'*'            reduce using rule 119


State 35

	scopeC -> G .                                       (rule 120)

	'*'            reduce using rule 120


State 36

	baseTypeHS -> IBool .                               (rule 125)

	ident          reduce using rule 125
	tyident        reduce using rule 125
	')'            reduce using rule 125
	'}'            reduce using rule 125
	';'            reduce using rule 125


State 37

	baseTypeHS -> IChar .                               (rule 126)

	ident          reduce using rule 126
	tyident        reduce using rule 126
	')'            reduce using rule 126
	'}'            reduce using rule 126
	';'            reduce using rule 126


State 38

	baseTypeHS -> IFloat .                              (rule 127)

	ident          reduce using rule 127
	tyident        reduce using rule 127
	')'            reduce using rule 127
	'}'            reduce using rule 127
	';'            reduce using rule 127


State 39

	baseTypeHS -> IDouble .                             (rule 128)

	ident          reduce using rule 128
	tyident        reduce using rule 128
	')'            reduce using rule 128
	'}'            reduce using rule 128
	';'            reduce using rule 128


State 40

	baseTypeHS -> Sint8 .                               (rule 130)

	ident          reduce using rule 130
	tyident        reduce using rule 130
	')'            reduce using rule 130
	'}'            reduce using rule 130
	';'            reduce using rule 130


State 41

	baseTypeHS -> Sint16 .                              (rule 131)

	ident          reduce using rule 131
	tyident        reduce using rule 131
	')'            reduce using rule 131
	'}'            reduce using rule 131
	';'            reduce using rule 131


State 42

	baseTypeHS -> Sint32 .                              (rule 132)

	ident          reduce using rule 132
	tyident        reduce using rule 132
	')'            reduce using rule 132
	'}'            reduce using rule 132
	';'            reduce using rule 132


State 43

	baseTypeHS -> Sint64 .                              (rule 133)

	ident          reduce using rule 133
	tyident        reduce using rule 133
	')'            reduce using rule 133
	'}'            reduce using rule 133
	';'            reduce using rule 133


State 44

	baseTypeHS -> Uint8 .                               (rule 134)

	ident          reduce using rule 134
	tyident        reduce using rule 134
	')'            reduce using rule 134
	'}'            reduce using rule 134
	';'            reduce using rule 134


State 45

	baseTypeHS -> Uint16 .                              (rule 135)

	ident          reduce using rule 135
	tyident        reduce using rule 135
	')'            reduce using rule 135
	'}'            reduce using rule 135
	';'            reduce using rule 135


State 46

	baseTypeHS -> Uint32 .                              (rule 136)

	ident          reduce using rule 136
	tyident        reduce using rule 136
	')'            reduce using rule 136
	'}'            reduce using rule 136
	';'            reduce using rule 136


State 47

	baseTypeHS -> Uint64 .                              (rule 137)

	ident          reduce using rule 137
	tyident        reduce using rule 137
	')'            reduce using rule 137
	'}'            reduce using rule 137
	';'            reduce using rule 137


State 48

	baseTypeHS -> Ix . integer                          (rule 138)

	integer        shift, and enter state 63


State 49

	refTypeHS -> Ref . scopeHS areaHS                   (rule 146)

	Stack          shift, and enter state 60
	Global         shift, and enter state 61

	scopeHS        goto state 62

State 50

	refTypeHS -> ConstRef . scopeHS areaHS              (rule 147)

	Stack          shift, and enter state 60
	Global         shift, and enter state 61

	scopeHS        goto state 59

State 51

	structName -> struct . tyident                      (rule 158)

	tyident        shift, and enter state 58


State 52

	structDef -> abstract . structName fp               (rule 156)

	struct         shift, and enter state 51

	structName     goto state 57

State 53

	structDef -> string . structName integer            (rule 157)

	struct         shift, and enter state 51

	structName     goto state 56

State 54

	bdDef -> bitdata . tyident '::' bitType '=' bdConstrs    (rule 163)

	tyident        shift, and enter state 55


State 55

	bdDef -> bitdata tyident . '::' bitType '=' bdConstrs    (rule 163)

	'::'           shift, and enter state 92


State 56

	structDef -> string structName . integer            (rule 157)

	integer        shift, and enter state 91


State 57

	structDef -> abstract structName . fp               (rule 156)

	fp             shift, and enter state 90


State 58

	structName -> struct tyident .                      (rule 158)

	integer        reduce using rule 158
	ident          reduce using rule 158
	tyident        reduce using rule 158
	fp             reduce using rule 158
	'{'            reduce using rule 158
	'['            reduce using rule 158


State 59

	refTypeHS -> ConstRef scopeHS . areaHS              (rule 147)

	tyident        shift, and enter state 83
	'('            shift, and enter state 84
	Array          shift, and enter state 85
	Struct         shift, and enter state 86
	Stored         shift, and enter state 87

	areaHS         goto state 89

State 60

	scopeHS -> Stack . tyident                          (rule 148)
